--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html><head>
-<title> [+] EKA Gans - Rest APIs [+]  </title>
+<title> [+] DandyHayate - APIs [+]  </title>
 <meta charset="UTF-8"> 
 <meta name="robots" content="all"> 
 <meta name="robots schedule" content="auto"> 
 <meta name="distribution" content="global"> 
 <meta name="googlebot" content="index,follow">
-<meta property="og:title" content="😎Eka Danu Arta😎"/>  
-<meta name="description" content=" ❤Sedang mencintai adelia citra purnama❤ "> 
+<meta property="og:title" content="𝗕𝗹𝗮𝗰𝗸❮𝗖𝗵𝗶𝗻𝗴"/>  
+<meta name="description" content=" belajar api 😑 "> 
 <meta property="og:image" content="https://i.ibb.co/1LCyWRW/Creepypasta.jpg">
 <link rel="shortcut icon" href="https://i.ibb.co/1LCyWRW/Creepypasta.jpg" />  
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -203,7 +203,7 @@ Sayings = "";
 document.getElementById("sayings").innerHTML = Sayings
 
 
-swal('Hai Stah', 'Welcome To Rest API EKA GANS,Maaf kalau banyak yg eror', 'warning')
+swal('Hai Stah', 'Welcome To Rest Dandy Api's,Maaf kalau banyak yg eror', 'warning')
 window.setTimeout("waktu()", 1000);
  
 	function waktu() {
@@ -214,7 +214,7 @@ window.setTimeout("waktu()", 1000);
 		document.getElementById("detik").innerHTML = waktu.getSeconds();
 	}
     </script>
-    <audio autoplay="true" src="https://j.top4top.io/m_1772xeikf9.mp3"></audio>
+    <audio autoplay="true" src="https://j.top4top.io/m_1989qkio00.mp3"></audio>
     <b><h2 id="one"><marquee width="70%">Jika Menemukan Bug Atau Eror Harap Segera Lapor, Terima Kasih</marquee></h2></b>
    </body>
 </td>
